# irisu_blackbox

./: .gitignore  README.md  pyproject.toml
assets/score_templates/: README.md
configs/: base.toml
src/irisu_blackbox/: action_grid.py  calibrate.py  checkpoints.py  config.py  dashboard.py  env.py  factory.py  hud.py  live_metrics.py  monitor.py  observation.py  play.py  policies.py  reward.py  score_ocr.py  termination.py  train.py
src/irisu_blackbox/backends/: __init__.py  base.py  mock.py  windows.py
tests/: test_action_grid.py  test_checkpoints.py  test_config_paths.py  test_dashboard.py  test_env_health_termination.py  test_hud.py  test_live_metrics.py  test_observation.py  test_reward.py  test_score_template.py  test_windows_backend.py
